On branch master Update and resize headshot. new file:   author-full-resolution.jpg new file:   author.png modified:   author.jpg deleted:    author.png modified:   edburns/index.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/index.html
+++ b/edburns/index.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    <h1>Ed Burns <a href="../author.jpg"><img width="109" src="../author.jpg" alt="Headshot of Ed Burns" /></a></h1>
-
+      <h1>Ed Burns <a href="../author-full-resolution.jpg"><img width="109" src="../author.jpg" alt="Headshot of Ed Burns" /></a></h1>
+      Photo credit: Avec meg <a href="https://www.avecmeg.com/">https://www.avecmeg.com/</a>.
 <pre><code>
 
 <a href="https://purl.oclc.org/NET/edburns/">https://purl.oclc.org/NET/edburns/</a>
