On branch master Add entries for JavaLand and JUG tour modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -28,12 +28,98 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <th>Topic(s)</th>
 
 </tr>
-	
+
+<tr>
+
+    <th rowspan="7"><span class="verticaltext">2024</span></th>
+
+    <td>JUG Dortmund</td>
+
+    <td>Dortmund, Germany</td>
+
+    <td>April 2024</td>
+
+    <td>(<a href="https://www.meetup.com/jug-dortmund/events/300427981/">Meetup link</a>) Pioneering the Future of Java with Intelligent Apps</td>
+
+</tr>
+
+<tr>
+
+    <td>JUG Paderborn</td>
+
+    <td>Paderborn, Germany</td>
+
+    <td>April 2024</td>
+
+    <td>(<a href="https://www.eventbrite.com/e/a-passwordless-future-tickets-846253606317">Eventbrite link</a>) Lightning talk: LangChain4j</td>
+
+</tr>
+
+<tr>
+
+    <td>JUG Düsseldorf</td>
+
+    <td>Düsseldorf, Germany</td>
+
+    <td>April 2024</td>
+
+    <td>(<a href="https://www.meetup.com/rheinjug/events/300283963/">Meetup link</a>) Developer Career Masterplan: Build your path to senior level and beyond, Pioneering the Future of Java with Intelligent Apps</td>
+
+</tr>
+
+<tr>
+
+    <td>Global Azure Austria</td>
+
+    <td>Linz, Austria</td>
+
+    <td>April 2024</td>
+
+    <td>Keynote: Pioneering the Future of Java with Intelligent Apps (<a href="https://www.youtube.com/watch?v=mIguuYMFbh0">Video</a>)</td>
+
+</tr>
+
+<tr>
+
+    <td>Java Vienna Meetup</td>
+
+    <td>Vienna, Austria</td>
+
+    <td>April 2024</td>
+
+    <td>(<a href="https://www.meetup.com/java-vienna/events/300027723/">Meetup link</a>) Prepare for Jakarta EE 11, Pioneering the Future of Java with Intelligent Apps, Developer Career Masterplan</td>
+
+</tr>
+
+<tr>
+
+    <td>JUG Berlin Brandenburg</td>
+
+    <td>Berlin, Germany</td>
+
+    <td>April 2024</td>
+
+    <td>(<a href="https://www.meetup.com/jug-bb/events/299793425/">Meetup link</a>) What's new for Java and AI at Microsoft, JDConf Recap</td>
+
+</tr>
+
+<tr>
+
+    <td>JavaLand</td>
+
+    <td>Nürbergring, Germany</td>
+
+    <td>April 2024</td>
+
+    <td>(<a href="https://meine.doag.org/shop/prd.793.javaland-2024-on-demand/">On-demand video link</a>) Prepare for Jakarta EE 11 (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3831">Abstract</a>), Ist meine Java-Anwendung bereit für die Cloud? Was kann ich wie migrieren? (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3881">Abstract</a>), Developer Career Master Plan (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3689">Abstract</a>)</td>
+
+</tr>	
+
 <tr>
 
     <th rowspan="4"><span class="verticaltext">2023</span></th>
 
-    <td>Microsoft Internal Presentation</a></td>
+    <td>Microsoft Internal Presentation</td>
 
     <td>Shanghai, China</td>
 
@@ -45,7 +131,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-    <td>Microsoft Internal Presentation</a></td>
+    <td>Microsoft Internal Presentation</td>
 
     <td>Teams</td>
 
