--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -111,7 +111,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
     <td>April 2024</td>
 
-    <td>(<a href="https://meine.doag.org/shop/prd.793.javaland-2024-on-demand/">On-demand video link</a>) Prepare for Jakarta EE 11 (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3831">Abstract</a>), Ist meine Java-Anwendung bereit für die Cloud? Was kann ich wie migrieren? (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3881">Abstract</a>), Developer Career Master Plan (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3689">Abstract</a>)</td>
+    <td>(<a href="https://meine.doag.org/shop/prd.793.javaland-2024-on-demand/">On-demand video link</a>) Prepare for Jakarta EE 11 (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3831">Abstract</a>), Ist meine Java-Anwendung bereit für die Cloud? Was kann ich wie migrieren? (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3881">Abstract</a>), Developer Career Master Plan (<a href="https://meine.doag.org/events/javaland/2024/agenda/#agendaId.3689">Abstract</a>), Panel the xz-Disaster (<a href="https://vimeo.com/932785542">Video</a>)</td>
 
 </tr>	
 
