On branch master Update key. modified:   edburns/pgp.html

--- a/edburns/pgp.html
+++ b/edburns/pgp.html
@@ -19,43 +19,54 @@
   <body>
     <h1>Ed Burns PGP Public Key</h1>
 
-<pre><code>
+    <pre><code>
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Version: GnuPG v1
 
-mQENBFRGte8BCADLqu7gG7o464BO1Y3/SJ8WhQqQvls/oji+1r/gJPD3u2aWkq5e
-ILGPtBPf9kbdAebl4Y5ymORH5tiG2yXGKL25MArDlhjwT1iUSMBk91vo2AgK4X7D
-DVfyppQGldu1KHiONECDadF4FbMzjM1W5/LUW0k098foC9MTlsgIaaTGp4mt3sip
-RAJ24jwbIXY4sffthyOt1abvdFpFLUBABDnEF5GiukEJRgSHxs4JcKsFTMXSgoxE
-CgVLdVNUjR5C52A2Rb/DnPr0jWPXwsQLDUizS1mFFEpK+UpuWArkTSCfrOI+yhHU
-WmRqm2VqBVzzmqwGMBU9sYeBmOfNSr6BQhpHABEBAAG0LUVkd2FyZCBKLiBCdXJu
-cyAoMjA0OCBiaXRzKSA8ZWRidXJuc0BhY20ub3JnPokBNwQTAQIAIQUCVEa17wIb
-AwYLCQgHAwIGFQgCCQoLAxYCAQIeAQIXgAAKCRCZkKoGYHE5D16bB/4wJOeALtq/
-y5DpBHK8vvLYxPsFldlXfFWRcGy7ZIJ0v5c5A5Ng9VKnc3WdWLKqYBiiX0fB0IqU
-XDikFjTbM4WcjBK0uR2th25GpgbWjIQlGEq+YfF3OpZXA4Ge9oh3ncB+O2BkT8Ze
-Fj7YQbMldU25KjcVNI90XnA/OoKSTD0OpmnsuFV2RohalImz07Y9U9SfsHVsRN1b
-L+oK/CPqWH/kL+8N0yaRarv+nkuCvKU8ds0HSw0kCYwnTsUeK4IE3KXFoU7jYBIv
-PKbFkCEj52nPWg8paztSCYOgA6WEJuB1id22xBOaydsNvfrX2gmDFyrYGbH2z55b
-qEj7RtNnGEyQuQENBFRGte8BCADdmM+khSQGpIaMUSZdsG5UF11sLE473VL71bat
-BN1dG2Sm80G6XPRwlkjFLsfZY6JuteyBWskz/hPcefddxRAOmNe3PRhq7yO0CyBR
-vomOpnzFYGlyFAJ5f3nF3VxQpMwDdUNlHssnBHK+qCVB/JZ2WWJ3H80IulAYmNjw
-7qU2svnXt+LxObyvWCeEU7rrM6n4bm0XV3n8YmMHxIDIN22U+6a1Bm5+WHFZyD3d
-0kwoXkG1PyyxnWzIKYTZDhGKx1PH13yaB7ZXSiRrHNckR26LQfkLTlLeY9cN/aLD
-bUIQFvYo/wB9qPlxrGhLnP1BhTHNeENnrvI4a1NyCGsho4B3ABEBAAGJAR8EGAEC
-AAkFAlRGte8CGwwACgkQmZCqBmBxOQ8yMAf+IJmDpcLLpHOLZ7v9IGEcrlv/FgcV
-YUWPVQdcdyxKLrSYWuN/2VGanwV7JediMUpKPHsxNcjOGIDWxKd3bCIBVoa406h0
-tLt5YD049eSJOrcKnCbgnr0gEpkHn1lKNkETcM9CTjfhJbWg3KvuBclPu2U5awhN
-zYAGMO/p2P02nQmVVPNT3KmSrM6PrVD0xA2O6ZlQQ9nsA6NQiTe3RcqVwMEPouIF
-g5enECyZRjb91yEdSTynwqPCuCR7DCNt/FBnNMI6KmFd7x26ZcYQHBRdrK963oxs
-4Klb1UgCT/J2N4J1k3P0V+cE9EspJVGdgbu7KQHW0O8ZT3QW8PqLfsMuiQ==
-=yi64
+mQGNBGYxjOsBDADOqtYkrK1TZZtZZmYVd5LBTMME8Q7VUVA4W1Lic+P3t7RsqxTr
+d3yXOZqFKoyj7yP3BGA0GCJz8jJt5MB+NZ9I3B3LlhZ07mj3qDLOsLeTtF3laH+a
+4BOJFdeULkuVe38A3zX6cDrCW8YWUeK6TF8GmExIa4kBSlF9tpU1csccAluyF/tf
+tk8ZNZHrmLTFo8QB+Eqigd+SnimQ6y9dm9eHr0LoYHOFPGyPJdq17fITtcL8wO2M
+YdvAbXdKAXX4XcBBA0SFstb9jvwvDNQ/oQH8heQZ1wgftl/lpoZSwxzLtUu8BTVp
+Xd0Rz0T3FqQTHGVeu080r3CbQ5xiK1AdWgxLXU0LOvEbzCymSFRFs00mtMJHNRLy
+ebc+QITJ4tgKkc2Lo3ceiWv2xuW2hZh9b3mpDkohBeN8pPzzJUHlZmy9QKxSzjlC
+wMEIZkm2KX69ZeRR/cmdKFl4zwfXLO7RxqmS2fFZm248LGuThO7PHGYAh0i7QAuU
+daQm6mt5qgVSgWEAEQEAAbQqRWQgQnVybnMgKDIwMjQwNDMwZWpiKSA8ZWRidXJu
+c0B5YWhvby5jb20+iQHXBBMBCABBFiEEXqDNvW3mycihbenKf0UYtcywnBQFAmYx
+jOsCGwMFCQlmAYAFCwkIBwICIgIGFQoJCAsCBBYCAwECHgcCF4AACgkQf0UYtcyw
+nBT2ogwAsfIq4NP6r7Q0VSSLiBSastg3nlwxq81FK9TcxfsOHNKITpiuaULtkI+d
+/RsGqnfmnIK7GYOm3gocb6Piz0AkUS23YpW7rJfjuuZYVbYUECfsDDY8P8XGpqCN
+BIO4AzhOq7IPs4I2jbtfY02kzRBbmU6n3lFu6mBsopYwylupcm2v1QpMRTF1CKsc
+yxhmDQtsYuqNy0NLK+9HYaax8KyzQ3sIGA5LwEK6FR95/+1UpbVVrcoYOERxKbFX
+3VlkRm7laN1JMPjYFolftUImVZpQKdOk65b7vHNhz3A2PiDCkndJFXMMQljnyprW
+b+k9XtSxNvu0VtO5XMSt3SLNouGHnRFaIq1yeNNwx1+yUlfh/NbR6h/ok7g8XCds
+ClDaRjDH+vKFJ6LjRAr0uNytWyJPCtsOyaydhLthbKNBD5RUI/XRDbeW7ktCbJZM
+tFt9xTgxT4MEFYAmlGawqRPVzO0ulQCDn53RMcXdEoNdaJCqqQ0mhXTqnXg2mo9e
+6EVdaYjRuQGNBGYxjOsBDADDUVB6q5sETDD2mFINfW350U0SJH2HZDierIuzVUVh
+muq4UB7MRhByPwG3zZ4j8f8PkGlEfKvSXF7dcAWZ3URxFsx5r/s2fXb3JVgbPVyF
+jvredzwThIVk9cky03sAIMNLdTJtUiOul8Y5yc46wYtHybaDvdvGuegHIIvx2LMh
+pbzQjUPt1RiEBtnGtDTcr/uczyKEqbH7rqaV6RuIsQvbs1B8LGO0cLocxrsvmzL1
+3UWr2npJ2mwBnQ3cguR6EdXAfQbP2LHadFKDEpG0InZFFyUDPWLb0SmJJxyDzBLn
+P3isWE/VHbuuldGjRgxf9QeyPIUfYPaJ0hLuOsJR1BrHc1pA7u1BOsqaVo1NS23K
+XXkvxMH8T6KtQivNReFL1nMOOP6u4vj1IIo2AwSPmw2pifczA9qemYfSMxtnE+Vz
+a612GJG0rLRsE8o4vqQT7MWrY3TdnGjw64TVwHZQvGaTFh/XwIT+Q9u7FpU2liYP
+ANSEx9lkfCPz+gvV0TIB1rkAEQEAAYkBvAQYAQgAJhYhBF6gzb1t5snIoW3pyn9F
+GLXMsJwUBQJmMYzrAhsMBQkJZgGAAAoJEH9FGLXMsJwUlC4MAKGohe5hjL3XrL5l
+Lc+j1xKpnFy1oo2gVtlF0hrjdEgYHg+SqmF/RCA8JB7qyQe8OZQol9KkKsXpygwW
+3LFmlJDga2cgeY80D9rfSc0PEO+loNI/ftK7M9ycY4B9w/gEFnF4e/kqPSyvTm7P
+4o7EfvdTNCg0plFc0Wkn/WRepSVpzDCMu/g4IJ3/aGozz115R4InVnjMwdsR516p
+QOJUh+OwtdjukHpbr4wDx3eMRvSFnROy1rQFVP0W7WbcaEEiQ0SvSm9f6SDfDmsg
+adhMyU5uM+zLQsJlxmQ1geVrN/xvJLAOSrFHYplTr33LKVpDEUlWIXJ16245hWa+
+H1LSgo8z0aX0pN4ehzBlt7I4iO5UTAs7+yqAIR/98SQeAyGsHpCW3s5yE88wBcva
+fGmfbTLd9osJnycgBUCRJdPwhd9XObfK6lIAk1Sq3lI44f6gfwe5RNoDCGraKvW8
+D8nwzTi5JE90OJQpUSlmF3mr5ZeHRehdbXYQeKf4bllsCdI/FA==
+=uzYX
 -----END PGP PUBLIC KEY BLOCK-----
-</code></pre>
+    </code></pre>
 
     <hr>
 <!-- Created: Tue Oct 21 15:48:41 EDT 2014 -->
 <!-- hhmts start -->
-Last modified: Tue Oct 21 15:49:15 EDT 2014
+Last modified: Tue Apr 31 15:49:15 EDT 2024
 <!-- hhmts end -->
   </body>
 </html>
