On branch master Your branch is up to date with 'origin/master'.
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   edburns/speaking-engagements.html

no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-    <th rowspan="7"><span class="verticaltext">2024</span></th>
+    <th rowspan="8"><span class="verticaltext">2024</span></th>
+
+    <td>DevTalks</td>
+
+    <td>Bucharest, Romania</td>
+
+    <td>May 2024</td>
+
+    <td>Prepare for Jakarta EE 11 (<a href="https://www.slideshare.net/slideshow/devtalks-romania-prepare-for-jakarta-ee-11/269400748">Slides</a>)</td>
+
+</tr>
+
+<tr>
 
     <td>JUG Dortmund</td>
 
