--- a/contact.html
+++ b/contact.html
@@ -56,33 +56,7 @@
 
 
     <div style="font-family: Roboto; border-radius: 5px; padding: 1px 30px; width: 75%;">
-        <form accept-charset="UTF-8" action="https://getform.io/f/4a01a681-f2f2-4265-a2d8-4223243736b1"" method="POST" enctype="multipart/form-data"  target="_blank" id="wpform">
-            <div>
-                <label>Full Name (optional)</label>
-                <div>
-                    <input style="margin-top: 5px; background-color: #fff; height:35px; width:235px;" type="text" name="first_name" placeholder="Enter your name and surname" >
-                </div>
-            </div>
-            <br>
-            <div>
-                <label>Email address (optional)</label>
-                <div>
-                    <input style="margin-top: 5px;background-color: #fff; height:35px; width:235px;" type="email" name="email" placeholder="Enter your email address" >
-                </div>
-            </div>
-            <br>
-            <div>
-                <label>Your Message</label>
-                <div>
-                    <textarea style="margin-top: 5px;background-color: #fff; height:50px; width:235px;" type="text" name="message" placeholder="Enter your message" required="required"></textarea>
-                </div>
-            </div>
-            <br>
-            <input type="hidden" name="utf8" value="✓">
-            <button style="font-size:14px; background-color:#6b7ddf; color:#fff; font-weight:bold; padding:10px 35px; margin: 5px 0 0 0;" type="submit">SUBMIT</button>
-        </form>
-
-        <p>Powered by <a href="https://app.getform.io/forms">getform.io</a>.</p>
+        <script type="text/javascript" src="https://form.jotform.com/jsform/242534837636161"></script>
     </div>
     
 </div><!--wrapper-->
