Try to fix audio.

--- a/edburns/classic-gaming/tunnels/sounds/index.html
+++ b/edburns/classic-gaming/tunnels/sounds/index.html
@@ -21,7 +21,7 @@
     <h1>Tunnels of Doom: Sounds</h1>
 
 <TABLE BORDER="0">
-<TR><TD><A HREF="death.wav">death.wav</A></TD></TR>
+<TR><TD><A HREF="death.wav">death.wav</A> <audio id="audio" src="death.wav"></audio> </TD></TR> 
 <TR><TD><A HREF="descending.wav">descending.wav</A></TD></TR>
 <TR><TD><A HREF="general-store.wav">general-store.wav</A></TD></TR>
 <TR><TD><A HREF="giant-rat.wav">giant-rat.wav</A></TD></TR>
