--- a/edburns/classic-gaming/tunnels/sounds/index.html
+++ b/edburns/classic-gaming/tunnels/sounds/index.html
@@ -21,7 +21,7 @@
     <h1>Tunnels of Doom: Sounds</h1>
 
 <TABLE BORDER="0">
-<TR><TD><A HREF="death.wav" onclick="document.getElementById('audio').play(); return false;">death.wav</A> <audio id="audio" src="death.wav"></audio> </TD></TR> 
+<TR><TD><A HREF="death.wav" onclick="document.getElementById('audio').play(); return false;">death.wav</A> <audio id="audio" src="death.wav" controls></audio> </TD></TR> 
 <TR><TD><A HREF="descending.wav">descending.wav</A></TD></TR>
 <TR><TD><A HREF="general-store.wav">general-store.wav</A></TD></TR>
 <TR><TD><A HREF="giant-rat.wav">giant-rat.wav</A></TD></TR>
@@ -44,7 +44,7 @@
     <address><a href="mailto:Ed Burns <ed.burns@sun.com>"></a></address>
 <!-- Created: Mon Jan 14 17:18:59 Pacific Standard Time 2002 -->
 <!-- hhmts start -->
-Last modified: Sun Jul 31 10:13:51 Eastern Daylight Time 2005
+Last modified: 2024-09-12 17:22 EDT
 <!-- hhmts end -->
   </body>
 </html>
