On branch master Fix broken links. modified:   edburns/classic-gaming/tunnels/index.html modified:   edburns/classic-gaming/tunnels/sounds/index.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/classic-gaming/tunnels/index.html
+++ b/edburns/classic-gaming/tunnels/index.html
@@ -103,7 +103,12 @@ me to use the Hank Mishkoff interview content.</P>
 
 <H1>Links</H1>
 
-	<UL>
+<UL>
+
+    <li><p><img src="../new.gif" />2024-10-01 Tunnels of Doom music box roll (<a href="https://www.youtube.com/watch?v=euMH2fCERAc">YouTube</a>)</p></li>
+
+    
+    <li><p><img src="../new.gif" />2024-10-01 <a href="https://web.archive.org/web/20231205012005/http://www.webfeats.com/todr/">Hank Mishkoff's Tunnels of Doom music page</a></p></li>
 
 	  <LI><P>A TI Fan mentions ToD.  <A HREF="http://vulgar.net/~british/cpugeek.html">http://vulgar.net/~british/cpugeek.html</A>.
 	  </P></LI>
@@ -121,15 +126,15 @@ me to use the Hank Mishkoff interview content.</P>
 <P>
 <center>
 <table bgcolor=gray cellspacing=0 border=2 bordercolor=red><tr>
-<td><table cellpadding=2 cellspacing=0 border=0><tr><td align=center>
-<font face=arial size=-1>This site is a member of WebRing. 
-<br>To browse visit <a href="http://ss.webring.com/navbar?f=l;y=edburns;u=10048740">
-Here</a>.</font></td></tr></table></td></tr></table>
+    <td><table cellpadding=2 cellspacing=0 border=0><tr><td align=center>
+        <font face=arial size=-1>This site <a href="https://webring.com/webring-history/">was</a> a member of WebRing. 
+            <br>To browse visit <a href="https://web.archive.org/web/20200204075651/http://ss.webring.com/navbar?f=l;y=edburns;u=10048740">
+                Here</a>.</font></td></tr></table></td></tr></table>
 </center>
 </P>
 
-Hits since 15 January 2002: <IMG SRC="http://counter.digits.com/wc/-d/4/tunnels-of-doom" 
- WIDTH="60" HEIGHT="20" BORDER="0" HSPACE="4" VSPACE="2">
+(At least this many) Hits since 15 January 2002: <IMG SRC="https://web.archive.org/web/20131021130350if_/http://counter.digits.com/wc/-d/4/tunnels-of-doom" 
+                                                      WIDTH="60" HEIGHT="20" BORDER="0" HSPACE="4" VSPACE="2">
 
     <hr>
     Please contact me if you have any suggestions/corrections to the
@@ -137,7 +142,7 @@ Hits since 15 January 2002: <IMG SRC="http://counter.digits.com/wc/-d/4/tunnels-
   <address><a href="mailto:Ed
     Burns <edburns@acm.org>">Ed Burns</a></address> <!-- Created: Mon
     Jan 14 12:12:37 Pacific Standard Time 2002 --> <!-- hhmts start -->
-    Last modified: Wed Dec 24 17:58:53 Pacific Standard Time 2002 <!--
+    Last modified: Wed Oct 2 14:10:53 Pacific Standard Time 2024 <!--
     hhmts end -->
   </body>
 </html>
