On branch master modified:   edburns/speaking-engagements.html
- JUG JAX
- Demo Bytes

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,32 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-    <th rowspan="8"><span class="verticaltext">2024</span></th>
+    <th rowspan="10"><span class="verticaltext">2024</span></th>
+
+    <td>Microsoft Reactor</td>
+
+    <td>Online</td>
+
+    <td>September 2024</td>
+
+    <td>
+        Deliver AI infused app innovation with Open Liberty on AKS (<a href="https://www.youtube.com/watch?v=Jcbp0D4qM0k">Video</a>)</td>
+
+</tr>
+
+<tr>
+
+    <td>JUG Jacksonville</td>
+
+    <td>Jacksonville, USA</td>
+
+    <td>September 2024</td>
+
+    <td>Deliver AI infused app innovation with bonus Java on Azure Container Apps (<a href="https://www.slideshare.net/slideshow/2024-09-10-jacksonville-jug-java-on-azure-with-ai/271714201#2">Slides</a>)</td>
+
+</tr>
+
+<tr>
 
     <td>DevTalks</td>
 
