Use wayback machine for JAOO

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -1757,7 +1757,7 @@ JSF 2.0 preview, <a href="https://www.youtube.com/watch?v=dOcQr6Z6COc">Video: Ke
 <td>October 
 </td>
 
-<td><a href="http://www.jaoo.dk/speakers/show_speaker.jsp?oid=27">Enterprise Grade Ajax and JSF, and Scripting JSF</a>
+<td><a href="https://web.archive.org/web/20060925101953/http://www.jaoo.dk/speakers/show_speaker.jsp?oid=27">Enterprise Grade Ajax and JSF, and Scripting JSF</a>
 </td>
 
 </tr>
