On branch master Add media section. modified:   owenburns/index.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/owenburns/index.html
+++ b/owenburns/index.html
@@ -247,6 +247,14 @@
 
                 </li>
 
+                <li>
+
+                    <p><a target ="_" href="../edburns/owenburns-toolcharm-oneethos/">2024-12-04 OneEthos Acquires Artificial Intelligence Startup ToolCharm</a></p>
+
+                </li>
+
+                
+
             </ul>
 
 
