WIP JavaLand tour

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,43 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-    <th rowspan="13"><span class="verticaltext">2025</span></th>
+    <th rowspan="16"><span class="verticaltext">2025</span></th>
+
+    <td>JDConf 2025</td>
+
+    <td>Online</td>
+
+    <td>April 2025</td>
+
+    <td> Spring, Quarkus, Tomcat, JBoss EAP - Hyperscale PaaS for any Java App (<a href="https://jdconf.com/agenda.html#apac-session-06">Abstract</a>, <a href="https://www.youtube.com/watch?v=qLiDzHA0hIA&t=8982s">Video</a>)</td>
+
+</tr>
+
+<tr>
+
+    <td>JDConf 2025</td>
+
+    <td>Online</td>
+
+    <td>April 2025</td>
+
+    <td>Deliver AI infused app innovation with Open Liberty on AKS (<a href="https://www.youtube.com/watch?v=198lJrwXZgw">Video</a>)</td>
+
+</tr>
+
+<tr>
+
+    <td>JUG Stuttgart</td>
+
+    <td>Stuttgart, Germany</td>
+
+    <td>April 2025</td>
+
+    <td>(<a href="https://www.meetup.com/jugstuttgart/events/306177115/">Meetup link</a>) Java and AI with LangChain4j (<a href="https://aka.ms/edburns/jugstuttgart2025">Slides</a>)</td>
+
+</tr>
+
+<tr>
 
     <td>Java Stammtisch</td>
 
