On branch master Your branch is up to date with 'origin/master'.
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   speaking-engagements.html

no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -1994,8 +1994,26 @@ Panel: Ajax panel discussion participant</br>
 
 <tr>
 
-<th rowspan="3"><span class="verticaltext">2005</span></th>
+<th rowspan="4"><span class="verticaltext">2005</span></th>
 
+
+<td>Munich Java User Group
+</td>
+
+<td>Munich, Germany
+</td>
+
+<td>November 
+</td>
+
+<td>
+    About Faces: The JavaServer Faces Framework (<a href="https://www.scribd.com/document/111986511/20051115-Muenchen-JUG-JSF">Slides</a>)
+</td>
+
+</tr>
+
+
+<tr>
 
 <td>W-JAX
 </td>
