On branch master JavaLand 2022 workshop modified:   edburns/speaking-engagements.html
no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -494,7 +494,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>March</td>
 
-  <td>Low Cost, Cloud Native, Open Standard Java on Azure Kubernetes Service, Modern Jakarta EE and Microprofile on Azure: Open Liberty, JBoss EAP, and WebLogic (<a href="https://www.javaland.eu/en/home/news/news/?tx_news_pi1%5Bnews%5D=2483&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Baction%5D=detail&cHash=955b6fd7d1749e908294e90151e35c20">Pre-conference interview</a>, <a href="https://shop.doag.org/javaland/2022/agenda/#textSearch.low%20cost">Video</a>, <a href="https://shop.doag.org/download.9d5f0060620be5b0069a8eb0c308ad8e_1/">Slides</a>)</td>
+  <td>Low Cost, Cloud Native, Open Standard Java on Azure Kubernetes Service, Instructor: full day workshop: Modern Jakarta EE and Microprofile on Azure: Open Liberty, JBoss EAP, and WebLogic (<a href="https://www.javaland.eu/en/home/news/news/?tx_news_pi1%5Bnews%5D=2483&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Baction%5D=detail&cHash=955b6fd7d1749e908294e90151e35c20">Pre-conference interview</a>, <a href="https://shop.doag.org/javaland/2022/agenda/#textSearch.low%20cost">Video</a>, <a href="https://shop.doag.org/download.9d5f0060620be5b0069a8eb0c308ad8e_1/">Slides</a>)</td>
 
 </tr>
 
