On branch master F3-1985. modified:   edburns/resume/index.html modified:   edburns/speaking-engagements.html
no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -586,7 +586,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>September</td>
 
-  <td></td>
+  <td>How Microsoft learned how to love Java (<a href="https://www.youtube.com/watch?v=UKfv5U-EK0k">video</a>)</td>
 
 </tr>
 
