On branch master modified:   edburns/resume/edburns.pdf modified:   edburns/resume/index.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/resume/index.html
+++ b/edburns/resume/index.html
@@ -376,12 +376,12 @@ REST, architecture, and industry analysis.
 
 <h4><a name="devrel">Trainer and Developer Relations</a></h4>
 
-<p>I have over thirteen years of extensive international conference
+<p>I have two decades of extensive international conference
 speaking and training experience, having developed and delivered a broad
-range of conference sessions and full day training workshops on a wide
+range of keynotes, conference sessions and full day training workshops on a wide
 array of software topics.  I started with sessions and trainings on JSF
 and J2EE in 2005 and continue in the present day with Docker,
-  Kubernetes, and cloud technologies.</p>
+  Kubernetes, cloud technologies and AI.</p>
 
 <p>A complete list of my sessions and training is at &lt;<a href="http://purl.oclc.org/NET/edburns/speaking-engagements/">http://purl.oclc.org/NET/edburns/speaking-engagements/</a>&gt;</p>
 
