--- a/edburns/resume/index.html
+++ b/edburns/resume/index.html
@@ -25,9 +25,9 @@ type=text/css></LINK>
 <P>
 <H1>Edward J. Burns</H1>
 <ADDRESS><A href="mailto:edburns@acm.org">edburns@acm.org</A> 
-<BR>URL: &lt;<A 
-href="http://purl.oclc.org/NET/edburns/resume">http://purl.oclc.org/NET/edburns/resume</A>&gt; 
-<a href="edburns.pdf">PDF</a>, <A href="edburns.docx">MSWord</A>, <A href="edburns.odt">Libre/Open/Star Office</A> and <A href="edburns.md">ASCII</A> format 
+    <BR>URL: &lt;<A 
+                     href="http://purl.oclc.org/NET/edburns/resume">http://purl.oclc.org/NET/edburns/resume</A>&gt; 
+    <a href="https://www.linkedin.com/in/edburns/">LinkedIn</a>, <a href="edburns.pdf">PDF</a>, <A href="edburns.docx">MSWord</A>, <A href="edburns.odt">Libre/Open/Star Office</A> and <A href="edburns.md">ASCII</A> format 
 available</ADDRESS>
 <ADDRESS><A href="address.html">Address 
 information</A></ADDRESS>
