On branch master Your branch is up to date with 'origin/master'.
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   edburns/speaking-engagements.html

no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-    <th rowspan="16"><span class="verticaltext">2025</span></th>
+    <th rowspan="17"><span class="verticaltext">2025</span></th>
+
+    <td>Jakarta Tech Talk</td>
+
+    <td>Online</td>
+
+    <td>April 2025</td>
+
+    <td>Jakarta Tech Talk - Jakarta EE 11: What's New and Why You Should Care (<a href="https://www.slideshare.net/slideshow/jakarta-ee-11-what-s-new-and-why-you-should-care/282277311">Slides</a>, <a href="https://www.youtube.com/watch?v=qxY8rQGEaZ8">Video</a>)</td>
+
+</tr>
+
+<tr>
 
     <td>JDConf 2025</td>
 
