On branch master Your branch is up to date with 'origin/master'.
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   edburns/resume/index.html

no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/resume/index.html
+++ b/edburns/resume/index.html
@@ -282,7 +282,13 @@ National Center for Supercomputing Applications: 1994-08 &mdash;
   href="http://archive.ncsa.uiuc.edu/SDG/Software/XMosaic/CCI/webcast.html">WebCast</A>, 
   a collaborative muticast (MBONE) program that enables sharing of web pages 
   between Mosaic's all over the world using the CCI and the reliable Multicast 
-    Protocol (RMP) library. </LI>
+      Protocol (RMP) library.
+
+      <ul>
+          <li>Referenced at [<a href="https://www.ambuehler.ethz.ch/CDstore/www6/Technical/Paper156/Paper156.html">1</a>] [<a href="https://web.archive.org/web/20250919221918/https://www.ambuehler.ethz.ch/CDstore/www6/Technical/Paper156/Paper156.html">archive</a>] [<a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/1999/CSD-99-1050.pdf">2</a>][<a href="1999-06-l-kristin-wright-berkeley-eecs.pdf">archive</a>]</li>
+      </ul>
+
+  </LI>
 
   </ul>
 
