On branch master Your branch is up to date with 'origin/master'.
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   edburns/speaking-engagements.html

no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,43 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-    <th rowspan="17"><span class="verticaltext">2025</span></th>
+    <th rowspan="20"><span class="verticaltext">2025</span></th>
+
+    <td>JDD</td>
+
+    <td>Krakow, Poland</td>
+
+    <td>October 2025</td>
+
+    <td>App Modernization of Java Applications (<a href="https://youtu.be/v2wUrOUfZhk">Video</a>)</td>
+
+</tr>
+
+<tr>
+
+    <td>IBM TechXchange</td>
+
+    <td>Orlando, U.S.A.</td>
+
+    <td>October 2025</td>
+
+    <td>langchain4j-cdi: Infuse your Jakarta and MicroProfile applications with all the AI (<a href="https://reg.tools.ibm.com/flow/ibm/techxchange25/sessioncatalog/page/sessioncatalog/session/1746107434822001TBmB">Session catalog</a>) (<a href="https://aka.ms/txc-2025">Slides</a>)</td>
+
+</tr>
+
+<tr>
+
+    <td>IBM TechXchange</td>
+
+    <td>Orlando, U.S.A.</td>
+
+    <td>October 2025</td>
+
+    <td>From CRUD to Cognitive: Modernizing Legacy Java Apps with Embedded AI (<a href="https://reg.tools.ibm.com/flow/ibm/techxchange25/sessioncatalog/page/sessioncatalog/session/1755490496291001i7Z9">Session catalog</a>)</td>
+
+</tr>
+
+<tr>
 
     <td>Jakarta Tech Talk</td>
 
