On branch master Your branch is up to date with 'origin/master'.
Untracked files:
  (use "git add <file>..." to include in what will be committed)
	19720915-01.png
	19720915-02.png
	19720915-tonsure-abandonment-day.html

nothing added to commit but untracked files present (use "git add" to track)

Signed-off-by: app_modernization <edburns@microsoft.com>

--- a/edburns/things-I-have-read.html
+++ b/edburns/things-I-have-read.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.2//EN">
+a<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.2//EN">
 <HTML>
 <HEAD>
    <TITLE>Things I have read</TITLE>
@@ -19,9 +19,11 @@
 </HEAD>
 <BODY>
 
-<P><!-- Changed by: Ed Burns (like the fire), 20-Aug-1998 --></P>
+    <P><!-- Changed by: Ed Burns (like the fire), 20-Aug-1998 --></P>
 
-<p><a href="http://purl.oclc.org/NET/edburns/booklist/">http://purl.oclc.org/NET/edburns/booklist/</a></p>
+    <p><a href="http://purl.oclc.org/NET/edburns/booklist/">http://purl.oclc.org/NET/edburns/booklist/</a></p>
+
+    I stopped maintaining this and now use GoodReads instead. Find me there: <a href="https://www.goodreads.com/author/show/133353.Ed_Burns">https://www.goodreads.com/author/show/133353.Ed_Burns</a>.
 
 <P><!-- Changed by: Ed Burns, 17-Feb-1996 --><!-- Changed by: Ed Burns (like the fire), 29-Jun-1996 -->This
 is a hodge podge of all the books I remember reading. I guess the others
