On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
  (use "git restore --staged <file>..." to unstage)
	modified:   edburns/resume/index.html

Signed-off-by: app_modernization <edburns@microsoft.com>

--- a/edburns/resume/index.html
+++ b/edburns/resume/index.html
@@ -27,7 +27,7 @@ type=text/css></LINK>
 <ADDRESS><A href="mailto:edburns@acm.org">edburns@acm.org</A> 
     <BR>URL: &lt;<A 
                      href="http://purl.oclc.org/NET/edburns/resume">http://purl.oclc.org/NET/edburns/resume</A>&gt; 
-    <a href="https://www.linkedin.com/in/edburns/">LinkedIn</a>, <a href="edburns.pdf">PDF</a>, <A href="edburns.docx">MSWord</A>, <A href="edburns.odt">Libre/Open/Star Office</A> and <A href="edburns.md">ASCII</A> format 
+    <a href="https://www.linkedin.com/in/edburns/">LinkedIn</a>, <a href="https://github.com/edburns/edburns.github.io/raw/refs/heads/master/edburns/resume/edburns.pdf">PDF</a>, <A href="https://github.com/edburns/edburns.github.io/raw/refs/heads/master/edburns/resume/edburns.docx">MSWord</A>, <A href="https://github.com/edburns/edburns.github.io/raw/refs/heads/master/edburns/resume/edburns.odt">Libre/Open/Star Office</A> and <A href="edburns.md">ASCII</A> format 
 available</ADDRESS>
 <ADDRESS><A href="address.html">Address 
 information</A></ADDRESS>
